--- a/views/partials/showcaseContainer.ejs
+++ b/views/partials/showcaseContainer.ejs
@@ -7,12 +7,12 @@
             </div>
 
             <p>
-                This platform was originally born out of one of my good friends and percussion instructors desire to have a online platform to teach lessons during the height of the pandemic. The aim of this platform is to group all necessary aspects of taking lessons into one centralized location. This includes instructor discovery, lesson availability, schedule management, file management, and lesson feedback. This project is still in development today as we work on adding desired features, improved stability, and improving the overall experience on the website.
+                This platform was originally born out of one of my instructors desire to have a online platform to teach lessons during the height of the pandemic. The aim of this platform is to group all necessary aspects of taking lessons into one centralized location including instructor discovery, lesson availability, schedule management, file management, and lesson feedback. This project is still in development today as we work on adding desired features, improved stability, and improved overall experience on the website.
             </p>
             <p id="cmsReadMore" class="centerText cursorHover">Read More</p>
             <span id="cmsReadMoreContent" class="hideElement">
                 <p>    
-                    The creation of this project saw me, along with three other associates who all knew each-other from competing in the marching arts, co-founding the company in July of 2021. Since its founding, we have added another member to the software team, making us a three man team, as well as bringing on a dedicated blog writer and social media manager to assist us in growing our brand and reputation. 
+                    Myself, along with three other associates who knew each-other from competing in the marching arts, co-founded the company in July of 2021. Since its founding, we have added another member to the software team, making us a three man team, as well as bringing on a dedicated blog writer and social media manager to assist us in growing our brand and reputation. 
                 </p>
                 <p>
                     My primary role in this project was originally to create the site-wide styles and layouts used throughout the website, while the second programmers role was to create the backend functionality. Since adding a third member to the software development team, we have transitioned away from having specific roles that we do, in favor of each member having more of a full stack development position. We found that this has helped greatly in both creating new features and fixing bugs, as we all have somewhat of an unpredictable schedule between work, school, and volunteer work with the marching program that we all know each other from.
