--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,37 +1,43 @@
 body {
   font-size: 18px;
-  line-height: 1.75rem;
+  line-height: 1.75em;
   font-family: 'Ubuntu', 'Sans-serif';
 }
 
+@media (max-width: 900px) {
+  body {
+    font-size: 16px;
+  }
+}
+
 h1 {
-  font-size: 2.5rem;
-  line-height: 4rem;
+  font-size: 2.5em;
+  line-height: 2.5em;
 }
 
 h2 {
-  font-size: 2.25rem;
-  line-height: 3.75rem;
+  font-size: 2.25em;
+  line-height: 2.75em;
 }
 
 h3 {
-  font-size: 2rem;
-  line-height: 3.5rem;
+  font-size: 2em;
+  line-height: 2.5em;
 }
 
 h4 {
-  font-size: 1.75rem;
-  line-height: 3.25rem;
+  font-size: 1.75em;
+  line-height: 2.25em;
 }
 
 h5 {
-  font-size: 1.5rem;
-  line-height: 3rem;
+  font-size: 1.5em;
+  line-height: 2em;
 }
 
 h6 {
-  font-size: 1.25rem;
-  line-height: 2.75rem;
+  font-size: 1.25em;
+  line-height: 1.75em;
 }
 
 body {
@@ -53,7 +59,7 @@ a, a:visited {
 }
 
 p {
-  margin: 30px 0;
+  margin-bottom: 30px;
 }
 
 footer {
@@ -69,6 +75,10 @@ footer {
 footer img {
   width: 25px;
   margin: 0 15px;
+}
+
+footer p {
+  margin: 0;
 }
 
 .hideElement {
@@ -108,6 +118,10 @@ footer img {
   align-items: center;
 }
 
+#indexHeader p {
+  margin: 0;
+}
+
 #indexHeader nav ul li {
   display: inline;
 }
@@ -118,9 +132,13 @@ footer img {
   justify-content: space-around;
 }
 
+#showcaseContainer .productImage {
+  margin-bottom: 30px;
+}
+
 #showcaseContainer .productHighlight {
   width: 40vw;
-  margin: 30px;
+  margin: 0 30px 30px;
   box-sizing: border-box;
 }
 
@@ -135,4 +153,15 @@ footer img {
 
 #speedoImgContainer img {
   width: 31%;
+}
+
+@media (max-width: 900px) {
+  #showcaseContainer {
+    flex-direction: column;
+  }
+  #showcaseContainer .productHighlight {
+    box-sizing: border-box;
+    width: 90vw;
+    margin: 0 5vw 30px;
+  }
 }
