--- a/public/scss/_fontSizes.scss
+++ b/public/scss/_fontSizes.scss
@@ -1,35 +1,41 @@
 body {
     font-size: 18px;
-    line-height: 1.75rem;
+    line-height: 1.75em;
     font-family: 'Ubuntu', 'Sans-serif';
 }
 
+@media (max-width: 900px) {
+    body {
+        font-size: 16px;
+    }
+}
+
 h1 {
-    font-size: 2.5rem;
-    line-height: 4rem;
+    font-size: 2.5em;
+    line-height: 2.5em;
 }
 
 h2 {
-    font-size: 2.25rem;
-    line-height: 3.75rem;
+    font-size: 2.25em;
+    line-height: 2.75em;
 }
 
 h3 {
-    font-size: 2rem;
-    line-height: 3.5rem;
+    font-size: 2em;
+    line-height: 2.5em;
 }
 
 h4 {
-    font-size: 1.75rem;
-    line-height: 3.25rem;
+    font-size: 1.75em;
+    line-height: 2.25em;
 }
 
 h5 {
-    font-size: 1.5rem;
-    line-height: 3rem;
+    font-size: 1.5em;
+    line-height: 2em;
 }
 
 h6 {
-    font-size: 1.25rem;
-    line-height: 2.75rem;
+    font-size: 1.25em;
+    line-height: 1.75em;
 }
