--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -20,7 +20,7 @@ a, a:visited {
 }
 
 p {
-    margin: 30px 0;
+    margin-bottom: 30px;
 }
 
 footer {
@@ -34,6 +34,9 @@ footer {
     img {
         width: 25px;
         margin: 0 15px;
+    }
+    p {
+        margin: 0;
     }
 }
 
