--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,9 +9,9 @@
                 <p>Web Developer & Software Engineer</p>
                 <nav>
                     <ul>
-                        <li><a href="#">Home</a></li>
+                        <li><a>Home</a></li>
                         <li> | </li>           
-                        <li><a href="#">Resume</a></li>
+                        <li><a>Resume</a></li>
                     </ul>
                 </nav>
             </span>
