Adds resume + hider spans

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,6 +19,8 @@
     </header>
     
     <%- include('../partials/showcaseContainer') %> 
+
+    <%- include('../partials/resumeContainer') %>
     
     <%- include('../partials/footer') %> 
 </body>
