--- a/views/partials/showcaseContainer.ejs
+++ b/views/partials/showcaseContainer.ejs
@@ -1,53 +1,55 @@
-<div id="showcaseContainer">
-    <div id="CMS" class="productHighlight">
-            <h2>Cloud Music Suite</h2>
-            
-            <div id="CMSImgContainer" class="productImage">
-                <img id="CMSImg1" class="previewImg" loading="lazy" src="/images/appScreenshots/CMS1.png" alt="Cloud Music Suite Landing Page">
-            </div>
-
-            <p>
-                This platform was originally born out of one of my instructors desire to have a online platform to teach lessons during the height of the pandemic. The aim of this platform is to group all necessary aspects of taking lessons into one centralized location including instructor discovery, lesson availability, schedule management, file management, and lesson feedback. This project is still in development today as we work on adding desired features, improved stability, and improved overall experience on the website.
-            </p>
-            <p id="cmsReadMore" class="centerText cursorHover">Read More</p>
-            <span id="cmsReadMoreContent" class="hideElement">
-                <p>    
-                    Myself, along with three other associates who knew each-other from competing in the marching arts, co-founded the company in July of 2021. Since its founding, we have added another member to the software team, making us a three man team, as well as bringing on a dedicated blog writer and social media manager to assist us in growing our brand and reputation. 
-                </p>
-                <p>
-                    My primary role in this project was originally to create the site-wide styles and layouts used throughout the website, while the second programmers role was to create the backend functionality. Since adding a third member to the software development team, we have transitioned away from having specific roles that we do, in favor of each member having more of a full stack development position. We found that this has helped greatly in both creating new features and fixing bugs, as we all have somewhat of an unpredictable schedule between work, school, and volunteer work with the marching program that we all know each other from.
-                </p>
-                <p>
-                    This project has taught me, along with all other members of the team, a huge amount about project management, as well as the most efficient ways to work with the limited personal and time resources that we have available to us. In the early stages of the project, we were incredibly ambitious with our goals and had to quickly learn how to set realistic expectations for ourselves as developers, and for the companies growth as a whole. Facing these challenges however, has brought us into an incredibly reliable and thought out system of work which we have seen bring us increased success and efficiency to our workflow, allowing us to have better timelines for our both our non-developer co-founders, as well as the users on the platform.
-                </p>
-                <p id="cmsReadLess" class="centerText cursorHover">Read Less</p>
-            </span>
-    </div>
+<span id="showcaseHider">
+    <div id="showcaseContainer">
+        <div id="CMS" class="productHighlight">
+                <h2>Cloud Music Suite</h2>
+                
+                <div id="CMSImgContainer" class="productImage">
+                    <img id="CMSImg1" class="previewImg" loading="lazy" src="/images/appScreenshots/CMS1.png" alt="Cloud Music Suite Landing Page">
+                </div>
     
-    <div id="speedometer" class="productHighlight">
-            <h2>Speedometer</h2>
-
-            <div id="speedoImgContainer" class="productImage">
-                <img id="speedoImg1" class="previewImg" loading="lazy" src="/images/appScreenshots/speedoGreen.svg" alt="Speedometer app screenshot">
-                <img id="speedoImg2" class="previewImg" loading="lazy" src="/images/appScreenshots/speedoYellow.svg" alt="Speedometer app screenshot">
-                <img id="speedoImg3" class="previewImg" loading="lazy" src="/images/appScreenshots/speedoRed.svg" alt="Speedometer app screenshot">
-            </div>
-
-            <p>
-                While not as in depth of an application as some other projects, this Speedometer also taught me some key items about web development, most importantly, a design first approach. 
-            </p>
-            <p id="speedoReadMore" class="centerText cursorHover">Read More</p>
-            <span id="speedoReadMoreContent" class="hideElement">
                 <p>
-                    For the majority of application and projects I had made prior to this Speedometer, I always wanted to jump straight in to coding rather than thinking about what I wanted to make it first. With this project however, me and my partner first created several design iterations to get to both a functional and attractive design first. Once we had this design, the actual development time of the application was significantly cut down, as we didn't have to make any decisions while we were coding, we just had to recreate what we already designed. 
+                    This platform was originally born out of one of my instructors desire to have a online platform to teach lessons during the height of the pandemic. The aim of this platform is to group all necessary aspects of taking lessons into one centralized location including instructor discovery, lesson availability, schedule management, file management, and lesson feedback. This project is still in development today as we work on adding desired features, improved stability, and improved overall experience on the website.
                 </p>
+                <p id="cmsReadMore" class="centerText cursorHover">Read More</p>
+                <span id="cmsReadMoreContent" class="hideElement">
+                    <p>    
+                        Myself, along with three other associates who knew each-other from competing in the marching arts, co-founded the company in July of 2021. Since its founding, we have added another member to the software team, making us a three man team, as well as bringing on a dedicated blog writer and social media manager to assist us in growing our brand and reputation. 
+                    </p>
+                    <p>
+                        My primary role in this project was originally to create the site-wide styles and layouts used throughout the website, while the second programmers role was to create the backend functionality. Since adding a third member to the software development team, we have transitioned away from having specific roles that we do, in favor of each member having more of a full stack development position. We found that this has helped greatly in both creating new features and fixing bugs, as we all have somewhat of an unpredictable schedule between work, school, and volunteer work with the marching program that we all know each other from.
+                    </p>
+                    <p>
+                        This project has taught me, along with all other members of the team, a huge amount about project management, as well as the most efficient ways to work with the limited personal and time resources that we have available to us. In the early stages of the project, we were incredibly ambitious with our goals and had to quickly learn how to set realistic expectations for ourselves as developers, and for the companies growth as a whole. Facing these challenges however, has brought us into an incredibly reliable and thought out system of work which we have seen bring us increased success and efficiency to our workflow, allowing us to have better timelines for our both our non-developer co-founders, as well as the users on the platform.
+                    </p>
+                    <p id="cmsReadLess" class="centerText cursorHover">Read Less</p>
+                </span>
+        </div>
+        
+        <div id="speedometer" class="productHighlight">
+                <h2>Speedometer</h2>
+    
+                <div id="speedoImgContainer" class="productImage">
+                    <img id="speedoImg1" class="previewImg" loading="lazy" src="/images/appScreenshots/speedoGreen.svg" alt="Speedometer app screenshot">
+                    <img id="speedoImg2" class="previewImg" loading="lazy" src="/images/appScreenshots/speedoYellow.svg" alt="Speedometer app screenshot">
+                    <img id="speedoImg3" class="previewImg" loading="lazy" src="/images/appScreenshots/speedoRed.svg" alt="Speedometer app screenshot">
+                </div>
+    
                 <p>
-                    For this project my main role was to do the visual design portion of the application, but was able to assist in the backend portions as well because of how much the design first approach we used sped up the actual coding of the design. This was a fairly straight forward UI as well, so there wasn't much to be figure out along the way. Throughout designing the backend portions, it was also a relatively simple process due to leveraging pre-made libraries, and only needing to get a few simple metrics from the phones sensors. 
+                    While not as in depth of an application as some other projects, this Speedometer also taught me some key items about web development, most importantly, a design first approach. 
                 </p>
-                <p>
-                    The majority of the struggle for this project was the user experience when using the application, as our intended use was for a parent or guardian to be able to set the app up and have it running on its own once the child begins driving. Unfortunately, we were unable to implement automatic detection of driving, but did manage to implement the majority of the features we wanted to have, including password protected configuration, custom speeding allowances, and parental messaging through sms in the case of excessive speeding. One key feature that we were unable to implement due to cost the cost restraints of it being a school project, was speed limit detection, which would have tied the entire app together and potentially led to us releasing it for public use.
-                </p>
-                <p id="speedoReadLess" class="centerText cursorHover">Read Less</p>
-            </span>
+                <p id="speedoReadMore" class="centerText cursorHover">Read More</p>
+                <span id="speedoReadMoreContent" class="hideElement">
+                    <p>
+                        For the majority of application and projects I had made prior to this Speedometer, I always wanted to jump straight in to coding rather than thinking about what I wanted to make it first. With this project however, me and my partner first created several design iterations to get to both a functional and attractive design first. Once we had this design, the actual development time of the application was significantly cut down, as we didn't have to make any decisions while we were coding, we just had to recreate what we already designed. 
+                    </p>
+                    <p>
+                        For this project my main role was to do the visual design portion of the application, but was able to assist in the backend portions as well because of how much the design first approach we used sped up the actual coding of the design. This was a fairly straight forward UI as well, so there wasn't much to be figure out along the way. Throughout designing the backend portions, it was also a relatively simple process due to leveraging pre-made libraries, and only needing to get a few simple metrics from the phones sensors. 
+                    </p>
+                    <p>
+                        The majority of the struggle for this project was the user experience when using the application, as our intended use was for a parent or guardian to be able to set the app up and have it running on its own once the child begins driving. Unfortunately, we were unable to implement automatic detection of driving, but did manage to implement the majority of the features we wanted to have, including password protected configuration, custom speeding allowances, and parental messaging through sms in the case of excessive speeding. One key feature that we were unable to implement due to cost the cost restraints of it being a school project, was speed limit detection, which would have tied the entire app together and potentially led to us releasing it for public use.
+                    </p>
+                    <p id="speedoReadLess" class="centerText cursorHover">Read Less</p>
+                </span>
+        </div>
     </div>
-</div>
+</span>
