--- a/public/css/main.css
+++ b/public/css/main.css
@@ -97,6 +97,100 @@ footer p {
   filter: invert(0.4);
 }
 
+#resumeAside {
+  padding: 20px;
+}
+
+#resumeAside div {
+  margin-bottom: 40px;
+}
+
+#resumeAside div p, #resumeAside div li {
+  margin-bottom: 10px;
+}
+
+#resumeAside div:nth-of-type(3) {
+  margin-bottom: 0px;
+}
+
+#resumeAside div:nth-of-type(3) ul {
+  display: inline;
+}
+
+#resumeAside div:nth-of-type(3) li {
+  display: inline;
+}
+
+#resumeAside div:nth-of-type(3) li:nth-of-type(even):after, #resumeAside div:nth-of-type(3) li:nth-of-type(even):before {
+  content: ' | ';
+}
+
+#resumeAside div:nth-of-type(3) ul:nth-of-type(2) li:nth-of-type(1):before {
+  content: ' | ';
+}
+
+#mainResumeContent {
+  padding: 20px;
+}
+
+#mainResumeContent ul {
+  list-style: inside disc;
+  text-indent: -25px;
+  margin-left: 25px;
+}
+
+@media (min-width: 515px) {
+  #resumeAside div:not(:nth-of-type(3)) {
+    display: inline-block;
+  }
+  #resumeAside div:nth-of-type(2) {
+    float: right;
+  }
+  #resumeAside div:nth-of-type(3) {
+    text-align: center;
+  }
+  #resumeAside div:nth-of-type(3) h2 {
+    text-align: left;
+  }
+}
+
+@media (min-width: 676px) {
+  #resumeContainer {
+    display: flex;
+    margin: 20px auto;
+    max-width: 900px;
+  }
+  #resumeAside {
+    display: inline-block;
+    border-right: 2px solid #322b24;
+  }
+  #resumeAside ul {
+    display: inline-block;
+  }
+  #resumeAside ul:nth-of-type(2) {
+    float: right;
+    text-align: right;
+  }
+  #resumeAside div:nth-of-type(3) {
+    text-align: left;
+  }
+  #resumeAside div:nth-of-type(3) ul {
+    display: inline-block;
+  }
+  #resumeAside div:nth-of-type(3) li {
+    display: block;
+  }
+  #resumeAside div:nth-of-type(3) li:nth-of-type(even) {
+    opacity: 1;
+  }
+  #resumeAside div:nth-of-type(3) li:nth-of-type(even):after, #resumeAside div:nth-of-type(3) li:nth-of-type(even):before {
+    content: none;
+  }
+  #resumeAside div:nth-of-type(3) ul:nth-of-type(2) li:nth-of-type(1):before {
+    content: none;
+  }
+}
+
 #indexHeader {
   display: flex;
   align-items: center;
