--- a/views/partials/resumeContainer.ejs
+++ b/views/partials/resumeContainer.ejs
@@ -48,35 +48,47 @@
         </aside>
         
         <div id="mainResumeContent">
-            <p>Comfortable with all facets of web development, including back end server design,database connectivity, HTML markup, and CSS design. I’m interested in using these skills to design and produce web based applications to enhance user experiences.</p>
+            <p>Comfortable with all facets of web development, including back end server design, database connectivity, HTML markup, and CSS design, as well software engineering design, maintenance, and improvement. I’m interested in using these skills to design and produce both web and standalone applications to enhance user experience.</p>
         
             <hr>
-            <h2>Front End Developer | Co-Founder</h2>
-            <p>Cloud Music Suite - Monroe, NC</p>
-            <p>July 2020 - Present</p>
+            <h2>Software Engineer</h2>
+            <p>System Logistics - Arden, NC</p>
+            <p>September 2021 - Current</p>
             <hr>
             <ul>
-                <li>Design and implement a responsive system for mobile devices as well as standard desktop screens</li>
-                <li>Utilization of Figma and Adobe XD to create functional prototypes that were reviewed and approved by the project team</li>
-                <li>Designs were continuously critiqued after initial approval as to improve the overall user experience as tests were conducted with potential users</li>
-                <li>After initial approval, implementation began using EJS and Sass</li>
-                <li>The majority of the site was built utilizing a mixture of CSS Grid and FlexBox in order to ensure both a consistent and adaptable design and user experience</li>
+                <li>Produce and maintain core software features</li>
+                <li>Spearhead new development to provide better reporting solutions for customers</li>
+                <li>Introduce new tools to provide an enhanced development process for future projects</li>
+                <li>Provide customers with emergency solutions in time critical situations</li>
+                <li>Install and update customer software working around their local dependencies</li>
+                <li>Increased personal communication skills between team members</li>
+            </ul>
+
+            <hr>
+            <h2>Developer / Co-Founder</h2>
+            <p>Cloud Music Suite - Monroe, NC</p>
+            <p>July 2020 - Current</p>
+            <hr>
+            <ul>
+                <li>Design and implement a responsive system for mobile and desktop devices</li>
+                <li>Utilization of Figma and Adobe XD to create functional prototypes</li>
+                <li>Use of agile methodology to continuously improve prototypes for end users</li>
+                <li>Implementation of web app using EJS and SASS, as well as later migration to React</li>
                 <li>As Co-Founder I was also involved in discussion about how and when to move forward with the project, and in doing so, have gained a vast knowledge in how to better manage a team as well as how to establish and adhere to project timelines</li>
             </ul>
         
             <hr>
             <h2>Back End Developer</h2>
-            <p>Senior Capstone | Startup Company - Rock Hill, SC
-            </p>
+            <p>Senior Capstone - Rock Hill, SC</p>
             <p>January 2021 - May 2021</p>
             <hr>
             <ul>
-                <li>Developed a custom API plugin for use primarily with iPhone </li>
-                <li>Used a combination of languages to develop such as: Swift, JavaScript, and MySql, as well as integrating into bubble.io for interfaces and automation</li>
-                <li>Simulated the full launch of the product features developed</li>
-                <li>Learned how to use Apple’s propitiatory coding languages to interface with health-kit data and in order to store and access it for processing</li>
+                <li>Developed a custom API plugin for use with iPhone and Apple HealthKit </li>
+                <li>Use of Swift, JavaScript, and MySql, as well as bubble.io for interfaces and automation</li>
+                <li>Simulated full launch of the product features developed</li>
+                <li>Learned how to use Apple’s propitiatory coding languages to interface with and store healthKit data</li>
                 <li>Worked within a multidisciplinary team to produce a single cohesive product</li>
-                <li>Use asynchronous communication platforms to effectively communicate needs, questions, and updates regarding the project </li>
+                <li>Use asynchronous communication platforms to effectively communicate needs, questions, and updates regarding the project</li>
             </ul>
         </div>
     </div>
