--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/main.css">
 
     <meta name="description" content="Michael Walters Personal Website">
-    <meta name="keywords" content="HTML, CSS, JavaScript, Web Development, Full Stack Development">
+    <meta name="keywords" content="HTML, CSS, JavaScript, Web Development, Full Stack Development, Software Engineer">
     <meta name="author" content="Michael Walters">
     <meta name="viewport" content="initial-scale=1.0, width=device-width" />
 
