--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,19 +1,20 @@
 <footer>
-    <a href="https://www.linkedin.com/in/michael-walters-0a061318a/" target="_blank" rel="noopener">
-        <img src="/images/linkedIn_Icon.png" alt="Linked In Icon Link">
-    </a>
-    <a href="https://www.instagram.com/_michael.walters/" target="_blank" rel="noopener">
-        <img src="/images/Instagram_Icon.png" alt="Instagram Icon Link">
-    </a>
-    <a href="https://twitter.com/__Walters__/" target="_blank" rel="noopener">
-        <img src="/images/Twitter_Icon.png" alt="Twitter Icon Link">
-    </a>
-    <a href="https://github.com/Walters8657" target="_blank" rel="noopener">
-        <img src="/images/Github_Icon.png" alt="Github Icon Link">
-    </a>
+    <span>
+        <a href="https://www.linkedin.com/in/michael-walters-0a061318a/" target="_blank" rel="noopener">
+            <img src="/images/linkedIn_Icon.png" alt="Linked In Icon Link">
+        </a>
+        <a href="https://www.instagram.com/_michael.walters/" target="_blank" rel="noopener">
+            <img src="/images/Instagram_Icon.png" alt="Instagram Icon Link">
+        </a>
+        <a href="https://github.com/Walters8657" target="_blank" rel="noopener">
+            <img src="/images/Github_Icon.png" alt="Github Icon Link">
+        </a>
+    </span>
 
     <p>&copy <%= new Date().getFullYear() %> Michael Walters </p>
 </footer>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 
 <script src="./js/main.js"></script>
 
