--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,1 +1,261 @@
-html{font-size:20px}@media (max-width: 600px){html{font-size:17px}}h1{font-size:2.63rem}h2{font-size:2.1rem}h3{font-size:1.57rem}h4,h5,h6{font-size:1.31rem}p,li{font-size:1rem;line-height:1.6rem}body{color:#322b24;background-color:#fafafa;font-family:'Ubuntu', 'sans-serif'}a,a:visited{text-decoration:none;color:#322b24}hr{height:2px;border:none;background-color:#322b24}#indexHeader,#nonIndexHeader{height:85vh;background-color:#12487e;color:#fafafa;background-image:url("/images/meBG.jpg");background-repeat:no-repeat;background-position-y:top;background-position-x:right;background-size:cover}#indexHeader div:nth-of-type(1),#nonIndexHeader div:nth-of-type(1){display:flex;align-items:center;justify-content:left;height:calc(100% - 1.3rem);padding:0px 20px}#indexHeader div:nth-of-type(1) span,#nonIndexHeader div:nth-of-type(1) span{display:inline}#indexHeader div:nth-of-type(1) span h1,#nonIndexHeader div:nth-of-type(1) span h1{display:inline;font-weight:600}#indexHeader div:nth-of-type(2),#nonIndexHeader div:nth-of-type(2){text-align:center;font-size:0.8rem}#indexHeader div:nth-of-type(2) a:not(:nth-of-type(1)):before,#nonIndexHeader div:nth-of-type(2) a:not(:nth-of-type(1)):before{content:" | "}#indexHeader div:nth-of-type(2) a,#nonIndexHeader div:nth-of-type(2) a{color:#fafafa}#indexHeader div:nth-of-type(1) span{color:#322b24;margin:auto 320px auto 40px}#indexHeader div:nth-of-type(1) span h1{font-size:80px}#indexHeader div:nth-of-type(1) span p{font-size:40px;text-align:right;margin-top:15px;line-height:40px}@media (max-width: 998px){#indexHeader div:nth-of-type(1) span h1{font-size:70px}#indexHeader div:nth-of-type(1) span p{font-size:35px}}@media (max-width: 930px){#indexHeader div:nth-of-type(1) span{margin-right:auto}#indexHeader div:nth-of-type(1) span h1{display:inline-block;width:250px}#indexHeader div:nth-of-type(1) span p{text-align:left}}@media (max-width: 635px){#indexHeader div:nth-of-type(1) span{margin-left:20px}}@media (max-width: 635px){#indexHeader div:nth-of-type(1) span h1{font-size:50px}#indexHeader div:nth-of-type(1) span p{font-size:25px}}@media (max-width: 480px){#indexHeader div:nth-of-type(1) span{margin:20px -20px;padding:20px;width:calc(100vw);background-image:linear-gradient(rgba(250,250,250,0.5), rgba(250,250,250,0.5))}#indexHeader div:nth-of-type(1) span h1,#indexHeader div:nth-of-type(1) span p{width:100%;text-align:center}}#nonIndexHeader{height:150px;background-image:url("/images/me.png");background-size:contain}#nonIndexHeader div:nth-of-type(1){justify-content:left;margin-right:100px}nav ul{margin:10px;text-align:center}nav ul li{display:inline}nav ul li a{padding:5px}nav ul li:not(:nth-last-child(1)):after{content:' | '}nav .navActivePage{border-bottom:solid #322b24 2px;padding-bottom:5px}footer{text-align:center;background-color:#12487e;color:#fafafa;padding:10px}footer a,footer img{height:30px}footer img{margin:0px 5px 5px}#resumeAside{padding:20px}#resumeAside div{margin-bottom:40px}#resumeAside div p,#resumeAside div li{margin-bottom:10px}#resumeAside div:nth-of-type(3){margin-bottom:0px}#resumeAside div:nth-of-type(3) ul{display:inline}#resumeAside div:nth-of-type(3) li{display:inline}#resumeAside div:nth-of-type(3) li:nth-of-type(even):after,#resumeAside div:nth-of-type(3) li:nth-of-type(even):before{content:' | '}#resumeAside div:nth-of-type(3) ul:nth-of-type(2) li:nth-of-type(1):before{content:' | '}#mainResumeContent{padding:20px}#mainResumeContent ul{list-style:inside disc;text-indent:-25px;margin-left:25px}@media (min-width: 515px){#resumeAside div:not(:nth-of-type(3)){display:inline-block}#resumeAside div:nth-of-type(2){float:right}#resumeAside div:nth-of-type(3){text-align:center}#resumeAside div:nth-of-type(3) h2{text-align:left}}@media (min-width: 676px){#resumeContainer{display:flex;margin:20px auto;max-width:900px}#resumeAside{display:inline-block;border-right:2px solid #322b24}#resumeAside ul{display:inline-block}#resumeAside ul:nth-of-type(2){float:right;text-align:right}#resumeAside div:nth-of-type(3){text-align:left}#resumeAside div:nth-of-type(3) ul{display:inline-block}#resumeAside div:nth-of-type(3) li{display:block}#resumeAside div:nth-of-type(3) li:nth-of-type(even){opacity:1}#resumeAside div:nth-of-type(3) li:nth-of-type(even):after,#resumeAside div:nth-of-type(3) li:nth-of-type(even):before{content:none}#resumeAside div:nth-of-type(3) ul:nth-of-type(2) li:nth-of-type(1):before{content:none}}#aboutMe{padding:30px 15px;max-width:900px;margin:auto}.productHighlight{padding:30px 15px}@media (min-width: 980px){.productHighlight{display:grid;grid-template-columns:auto 300px 600px auto;column-gap:20px}.productHighlight div:nth-of-type(1){grid-column:2/3}.productHighlight div:nth-of-type(2){display:flex;align-self:center}}.productHighlight div:nth-of-type(1){margin:auto;height:316px;width:300px}.productHighlight div:nth-of-type(2) p:nth-last-of-type(1)>a{display:block;margin-top:10px;text-align:right}.productHighlight img:hover{cursor:pointer}#speedometer #speedoImgContainer img{width:150px;position:relative}#speedometer #speedoImgContainer img:nth-of-type(2){margin-left:-80px;top:25px}#speedometer #speedoImgContainer img:nth-of-type(3){margin-left:-80px;top:50px}#schedulerApp #schedulerImgContainer img{display:block;width:300px}#CMS #CMSImgContainer img{display:block;width:300px}#expandImages{display:none;align-items:center;justify-content:center;position:fixed;top:0;left:0;height:100%;width:100%;background-color:rgba(0,0,0,0.6);backdrop-filter:blur(5px);-webkit-backdrop-filter:blur(5px)}#expandImages img{display:none;max-height:80vh;max-width:calc(100vw - 40px);margin:auto}.showExpandedImgDiv{display:flex !important}.showExpandedImgDiv p{color:#fafafa;font-size:1.2rem;font-weight:700;text-align:center}.showExpandedImgDiv p:hover{cursor:pointer}.showExpandedImg{display:block !important}
+body {
+  font-size: 18px;
+  line-height: 1.75em;
+  font-family: 'Ubuntu', 'Sans-serif';
+}
+
+@media (max-width: 900px) {
+  body {
+    font-size: 16px;
+  }
+}
+
+h1 {
+  font-size: 2.5em;
+  line-height: 2.5em;
+}
+
+h2 {
+  font-size: 2.25em;
+  line-height: 2.75em;
+}
+
+h3 {
+  font-size: 2em;
+  line-height: 2.5em;
+}
+
+h4 {
+  font-size: 1.75em;
+  line-height: 2.25em;
+}
+
+h5 {
+  font-size: 1.5em;
+  line-height: 2em;
+}
+
+h6 {
+  font-size: 1.25em;
+  line-height: 1.75em;
+}
+
+body {
+  color: #322b24;
+  background-color: #fafafa;
+}
+
+img {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
+a {
+  text-decoration: none;
+}
+
+a, a:visited {
+  color: #322b24;
+}
+
+p {
+  margin-bottom: 30px;
+}
+
+footer {
+  background-color: #12487e;
+  padding: 20px;
+  color: #fafafa;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+footer img {
+  width: 25px;
+  margin: 0 15px;
+}
+
+footer p {
+  margin: 0;
+}
+
+.hideElement {
+  display: none;
+}
+
+.centerText {
+  text-align: center;
+}
+
+.cursorHover {
+  cursor: pointer;
+}
+
+.cursorHover:hover {
+  filter: invert(0.4);
+}
+
+#resumeAside {
+  padding: 20px;
+}
+
+#resumeAside div {
+  margin-bottom: 40px;
+}
+
+#resumeAside div p, #resumeAside div li {
+  margin-bottom: 10px;
+}
+
+#resumeAside div:nth-of-type(3) {
+  margin-bottom: 0px;
+}
+
+#resumeAside div:nth-of-type(3) ul {
+  display: inline;
+}
+
+#resumeAside div:nth-of-type(3) li {
+  display: inline;
+}
+
+#resumeAside div:nth-of-type(3) li:nth-of-type(even):after, #resumeAside div:nth-of-type(3) li:nth-of-type(even):before {
+  content: ' | ';
+}
+
+#resumeAside div:nth-of-type(3) ul:nth-of-type(2) li:nth-of-type(1):before {
+  content: ' | ';
+}
+
+#mainResumeContent {
+  padding: 20px;
+}
+
+#mainResumeContent ul {
+  list-style: inside disc;
+  text-indent: -25px;
+  margin-left: 25px;
+}
+
+@media (min-width: 515px) {
+  #resumeAside div:not(:nth-of-type(3)) {
+    display: inline-block;
+  }
+  #resumeAside div:nth-of-type(2) {
+    float: right;
+  }
+  #resumeAside div:nth-of-type(3) {
+    text-align: center;
+  }
+  #resumeAside div:nth-of-type(3) h2 {
+    text-align: left;
+  }
+}
+
+@media (min-width: 676px) {
+  #resumeContainer {
+    display: flex;
+    margin: 20px auto;
+    max-width: 900px;
+  }
+  #resumeAside {
+    display: inline-block;
+    border-right: 2px solid #322b24;
+  }
+  #resumeAside ul {
+    display: inline-block;
+  }
+  #resumeAside ul:nth-of-type(2) {
+    float: right;
+    text-align: right;
+  }
+  #resumeAside div:nth-of-type(3) {
+    text-align: left;
+  }
+  #resumeAside div:nth-of-type(3) ul {
+    display: inline-block;
+  }
+  #resumeAside div:nth-of-type(3) li {
+    display: block;
+  }
+  #resumeAside div:nth-of-type(3) li:nth-of-type(even) {
+    opacity: 1;
+  }
+  #resumeAside div:nth-of-type(3) li:nth-of-type(even):after, #resumeAside div:nth-of-type(3) li:nth-of-type(even):before {
+    content: none;
+  }
+  #resumeAside div:nth-of-type(3) ul:nth-of-type(2) li:nth-of-type(1):before {
+    content: none;
+  }
+}
+
+#indexHeader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 80vh;
+}
+
+#indexHeader #headerLogoImg {
+  padding: 3px;
+  width: 225px;
+  border-radius: 50%;
+  border: solid #322b24 6px;
+  background-color: #12487e;
+}
+
+#indexHeader div span {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#indexHeader p {
+  margin: 0;
+}
+
+#indexHeader nav ul li {
+  display: inline;
+}
+
+#showcaseContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+#showcaseContainer .productImage {
+  margin-bottom: 30px;
+}
+
+#showcaseContainer .productHighlight {
+  width: 40vw;
+  margin: 0 30px 30px;
+  box-sizing: border-box;
+}
+
+#showcaseContainer .productHighlight img {
+  max-width: 100%;
+}
+
+#speedoImgContainer {
+  display: flex;
+  justify-content: space-between;
+}
+
+#speedoImgContainer img {
+  width: 31%;
+}
+
+@media (max-width: 900px) {
+  #showcaseContainer {
+    flex-direction: column;
+  }
+  #showcaseContainer .productHighlight {
+    box-sizing: border-box;
+    width: 90vw;
+    margin: 0 5vw 30px;
+  }
+}
