--- a/public/scss/_index.scss
+++ b/public/scss/_index.scss
@@ -1,117 +1,66 @@
-@import 'mixins';
+@import 'variables';
 
-#aboutMe {
-    @include padding;
-    max-width: 900px;
-    margin: auto;
-}
-
-.productHighlight {
-    @include padding;
-    @media (min-width: 980px) {
-        display: grid;
-        grid-template-columns: auto 300px 600px auto;
-        column-gap: 20px;
-        div:nth-of-type(1) {
-            grid-column: 2/3;
-        }
-        div:nth-of-type(2) {
-            display: flex;
-            align-self: center;
-            
-        }
-    }
-    div:nth-of-type(1) {
-        margin: auto;
-        height: 316px;
-        width: 300px;
-    }
-    div:nth-of-type(2) {
-        p:nth-last-of-type(1) > a {
-            display: block;
-            margin-top: 10px;
-            text-align: right;
-        }
-    }
-    img:hover {
-        cursor: pointer;
-    }
-}
-
-#speedometer {
-    #speedoImgContainer {
-        img {
-            width: 150px;
-            position: relative;
-        }
-        img:nth-of-type(2) {
-            margin-left: -80px;
-            top: 25px;
-        }
-        img:nth-of-type(3) {
-            margin-left: -80px;
-            top: 50px;
-        }
-    }
-}
-
-#schedulerApp {
-    #schedulerImgContainer {
-        img {
-            display: block;
-            width: 300px;
-        }
-    }
-}
-
-#CMS {
-    #CMSImgContainer {
-        img {
-            display: block;
-            width: 300px;
-        }
-    }
-}
-
-#expandImages {
-    //display: flex;
-    display: none;
+#indexHeader {
+    display: flex;
     align-items: center;
     justify-content: center;
-    
-    position: fixed;
-    top: 0;
-    left: 0;
-
-    height: 100%;
-    width: 100%;
-
-    background-color: rgba(0, 0, 0, 0.6);
-
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-
-    img {
-        display: none;
-        max-height: 80vh;
-        max-width: calc(100vw - 40px);
-        margin: auto;
+    height: 80vh;
+    #headerLogoImg {
+        padding: 3px;
+        width: 225px;
+        border-radius: 50%;
+        border: solid $black 6px;
+        background-color: $blue;
     }
-}
-
-.showExpandedImgDiv {
-    display: flex !important;
+    div span {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
     p {
-        color: $white;
-        font-size: 1.2rem;
-        font-weight: 700;
-        text-align: center;
+        margin: 0;
     }
-    p:hover {
-        cursor: pointer;
+    nav {
+        ul {
+            li {
+                display: inline;
+            }
+        }
+    } 
+}
+
+#showcaseContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    .productImage {
+        margin-bottom: 30px;
+    }
+    .productHighlight {
+        width: 40vw;
+        margin: 0 30px 30px;
+        box-sizing: border-box;
+        img {
+            max-width: 100%;
+        }
     }
 }
 
-.showExpandedImg {
-    display: block !important;
+#speedoImgContainer {
+    display: flex;
+    justify-content: space-between;
+    img {
+        width: 31%;
+    }
+}
+
+@media (max-width: 900px) {
+    #showcaseContainer {
+        flex-direction: column;
+        .productHighlight {
+            box-sizing: border-box;
+            width: 90vw;
+            margin: 0 5vw 30px;
+        }
+    }
 }
