--- a/public/scss/_variables.scss
+++ b/public/scss/_variables.scss
@@ -1,3 +1,6 @@
 $white: #fafafa;
-$black: #322b24;
+$black: #332b24;
 $blue : #12487e;
+
+$darkerBlack: rgb(27, 29, 30);
+$darkerBlackOpacity: rgba(27, 29, 30, 0.75);
