--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -40,6 +40,14 @@ footer {
     }
 }
 
+#defaultCanvas0 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    background-color: $black;
+}
+
 //--------------
 //--------------
 // CLASSES
