--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -15,8 +15,10 @@
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.min.js"></script>
 
 <script src="./js/main.js"></script>
+<script src="./js/boids.js"></script>
 
 </body>
 </html>
