--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -45,7 +45,9 @@ footer {
     top: 0;
     left: 0;
     z-index: 0;
-    background-color: $black;
+    width: 100vw;
+    height: 80vh;
+    display: block;
 }
 
 //--------------
