iOS theme color

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/main.css">
 
+    <meta name="theme-color" content="#1b1d1e">
+
     <meta name="description" content="Michael Walters Personal Website">
     <meta name="keywords" content="HTML, CSS, JavaScript, Web Development, Full Stack Development, Software Engineer">
     <meta name="author" content="Michael Walters">
