--- a/public/scss/_variables.scss
+++ b/public/scss/_variables.scss
@@ -2,5 +2,5 @@ $white: #fafafa;
 $black: #332b24;
 $blue : #12487e;
 
-$darkerBlack: rgb(27, 29, 30);
+$darkerBlack: #1b1d1e;
 $darkerBlackOpacity: rgba(27, 29, 30, 0.75);
