--- a/public/css/main.css
+++ b/public/css/main.css
@@ -88,7 +88,8 @@ footer p {
   z-index: 0;
   width: 100vw;
   height: 80vh;
-  display: block;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .hideElement {
