Functionality of speeding time save calculator

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -12,6 +12,8 @@
                         <li id="homeLink" class="cursorHover"><a>Home</a></li>
                         <li> | </li>           
                         <li id="resumeLink" class="cursorHover"><a>Resume</a></li>
+                        <li> | </li>
+                        <li id="funToolsLink" class="cursorHover">Fun Tools</li>
                     </ul>
                 </nav>
             </span>
@@ -21,6 +23,8 @@
     <%- include('../partials/showcaseContainer') %> 
 
     <%- include('../partials/resumeContainer') %>
+    
+    <%- include('../partials/funToolsContainer') %>
     
     <%- include('../partials/footer') %> 
 </body>
