--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -20,5 +20,7 @@
 <script src="./js/main.js"></script>
 <script src="./js/boids.js"></script>
 
+<script src="./js/funTools.js"></script>
+
 </body>
 </html>
