--- a/public/css/main.css
+++ b/public/css/main.css
@@ -286,3 +286,36 @@ footer p {
     margin: 0 5vw 30px;
   }
 }
+
+#funToolsContainer {
+  text-align: center;
+}
+
+#funToolsContainer input[type=range][orient=vertical] {
+  appearance: slider-vertical;
+  height: 220px;
+  width: 50px;
+}
+
+#funToolsContainer input[type=number] {
+  width: 50px;
+}
+
+#funToolsContainer #timeSavedSpeeding {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#funToolsContainer #timeSavedSpeeding #speedingInputs {
+  width: 200px;
+  display: flex;
+  justify-content: space-between;
+}
+
+#funToolsContainer #timeSavedSpeeding #speedingInputs #speedLimit, #funToolsContainer #timeSavedSpeeding #speedingInputs #drivingSpeed {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100px;
+}
