--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,7 +3,7 @@
 <body>
     <header id="indexHeader">
         <div>
-            <span>
+            <span id="headerContent">
                 <img id="headerLogoImg" src="images/me.png" alt="Personal Logo">
                 <h1>Michael Walters</h1>
                 <p>Web Developer & Software Engineer</p>
